adiciona o mute no video para o autoplay funcionar no chrome

--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
     <main role="main">
         <div id="myCarousel" class="carousel slide pointer-event" data-ride="carousel">
             <ol class="carousel-indicators">
-                <li data-target="#myCarousel" data-slide-to="0" class=""></li>
-                <li data-target="#myCarousel" data-slide-to="1" class="active"></li>
+                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                <li data-target="#myCarousel" data-slide-to="1" class=""></li>
                 <li data-target="#myCarousel" data-slide-to="2" class=""></li>
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item">
-                    <video src="images/logo-1080p.mp4" class="bd-placeholder-img" autoplay loop></video>
+                    <video src="images/logo-1080p.mp4" class="bd-placeholder-img" autoplay loop muted></video>
                     <div class="container-fluid">
                         <div class="carousel-caption">
                             <h1><img src="images/logo2.png"></h1>
