Adiciona a sessão sobre e agenda, inicio da doar

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/carousel.css">
     <link rel="stylesheet" href="css/style.css">
     <title>PIBVP</title>
 
@@ -49,35 +48,30 @@
     </header>
     <main role="main">
         <div id="myCarousel" class="carousel slide pointer-event" data-ride="carousel">
-            <ol class="carousel-indicators">
-                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                <li data-target="#myCarousel" data-slide-to="1" class=""></li>
-                <li data-target="#myCarousel" data-slide-to="2" class=""></li>
-            </ol>
             <div class="carousel-inner">
-                <div class="carousel-item">
+                <div class="carousel-item active">
                     <video src="images/logo-1080p.mp4" class="bd-placeholder-img" autoplay loop muted></video>
                     <div class="container-fluid">
                         <div class="carousel-caption">
-                            <h1><img src="images/logo2.png"></h1>
-                            <p>Seja bem vindo!</p>
+                            <p><img src="images/logo2.png"></p>
+                            <h2>Seja bem vindo!</h2>
                         </div>
                     </div>
                 </div>
-                <div class="carousel-item active">
+                <div class="carousel-item">
                     <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img"><rect width="100%" height="100%" fill="#777"></rect></svg>
-                    <div class="container">
-                        <div class="carousel-caption">
+                    <div class="container-fluid center">
+                        <div class="carousel-caption center">
                             <h1>Fique ligado no<br/> próximo EVENTO</h1>
                         </div>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="images/trigo.jpg" alt="Campo de trigo">
-                    <div class="container">
+                    <img src="images/trigo.jpg" class="bd-placeholder-img" alt="Campo de trigo">
+                    <div class="container-fluid">
                         <div class="carousel-caption">
-                            <h1>Porque ele</h1>
-                            <p>NOS AMOU PRIMEIRO</p>
+                            <h1>Porque ele<br>
+                            NOS AMOU PRIMEIRO</h1>
                             <p><a class="btn btn-lg btn-outline-success btn-custom" href="#" role="button">CONTRIBUA</a></p>
                         </div>
                     </div>
@@ -92,6 +86,61 @@
                 <span class="sr-only">Next</span>
             </a>
         </div>
+
+        <div class="container-fluid sobre">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-2">
+                        <h1>UMA<br>
+                            GRANDE<br>
+                            FAMÍLIA</h1>
+                    </div>
+                    <div class="col-lg-9 offset-lg-1">Igreja não é uma construção de alvenaria, ou madeira, ou mesmo tenda. Quando perdemos de vista que Igreja são as pessoas, não nos identificamos mais com o Jesus de Nazaré. Pois Ele deu Sua vida por gente, por pessoas. E Ele mesmo fundou a primeira comunidade de fé e amor, que buscava os princípios de Deus para suas vidas. Venha celebrar a Jesus conosco, venha também estudar a palavra de Deus e servir a comunidade. Temos espaço para você.</div>
+                </div>
+            </div>
+        </div>
+
+        <div class="container-fluid agenda">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-4 grid-1">
+                        <h1>FIQUE<br>
+                        LIGADO</h1>
+                    </div>
+                    <div class="col-lg-8 grid-2">
+                        Fique por dentro de tudo que acontece dentro<br> de nossa Igreja. Envolva-se...
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-4 grid bg-1">
+                        <h1>15 set</h1>
+                        <h3p>AGORA</h3p>
+                    </div>
+                    <div class="col-lg-4 grid bg-2">
+                        <h1>29 set</h1>
+                        <h3>Recital de Música</h3>
+                    </div>
+                    <div class="col-lg-4 grid bg-3">
+                        <h1>19 e 23 dez</h1>
+                        <h3>Musical de Natal</h3>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col grid-footer"></div>
+                </div>
+            </div>
+        </div>
+
+        <div class="container doar">
+            <div class="row">
+                <div class="col text-center">
+                    <img src="images/doar.gif" alt="Doar">
+                    <h1>"Porque Deus ama quem dá com alegria."</h1>
+                    <p>2 Coríntios 9:7</p>
+                </div>
+            </div>
+        </div>
+
         <div class="container-fluid">
             <p>1</p>
             <p>2</p>
