--- a/index.html
+++ b/index.html
@@ -50,7 +50,11 @@
         <div id="myCarousel" class="carousel slide pointer-event" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <video src="images/logo-1080p.mp4" class="bd-placeholder-img" autoplay loop muted></video>
+                    <video class="bd-placeholder-img" autoplay loop muted>
+                        <source media="(min-width: 500px)" src="images/logo-480p.mp4" type="video/mp4">
+                        <source media="(min-width: 960px)" src="images/logo-720p.mp4" type="video/mp4">
+                        <source media="(min-width: 1024px)" src="images/logo-1080p.mp4" type="video/mp4">
+                    </video>
                     <div class="container-fluid">
                         <div class="carousel-caption">
                             <p><img src="images/logo2.png"></p>
@@ -142,36 +146,22 @@
         </div>
 
         <div class="container-fluid">
-            <p>1</p>
-            <p>2</p>
-            <p>3</p>
-            <p>4</p>
-            <p>5</p>
-            <p>6</p>
-            <p>7</p>
-            <p>8</p>
-            <p>9</p>
-            <p>10</p>
-            <p>11</p>
-            <p>12</p>
-            <p>13</p>
-            <p>14</p>
-            <p>15</p>
-            <p>16</p>
-            <p>17</p>
-            <p>18</p>
-            <p>19</p>
-            <p>20</p>
-            <p>21</p>
-            <p>22</p>
-            <p>23</p>
-            <p>24</p>
-            <p>25</p>
-            <p>26</p>
-            <p>27</p>
-            <p>28</p>
-            <p>29</p>
-            <p>30</p>
+            <div class="row">
+                <div class="col text-center">
+                    <h1>Fique por dentro da programação</h1>
+                    <form>
+                        <div class="row">
+                            <div class="col-4 offset-2">
+                                <input name="programacao" class="field" placeholder="E-mail" type="email">
+                            </div>
+                            <div class="col-4">
+                                <button class="btn btn-principal" type="submit">Enviar</button>
+                            </div>
+                        </div>
+
+                    </form>
+                </div>
+            </div>
         </div>
     </main>
 <!-- Optional JavaScript -->
