Continuação do Quem somos, e Ministério

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
     <title>PIBVP</title>
 
@@ -21,23 +21,23 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">PIBVP</a>
+                        <a class="nav-link" href="sobre.html">PIBVP</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Mensagens</a>
+                        <a class="nav-link" target="_blank" href="https://www.youtube.com/channel/UCLzamsFk_JpZYsHhyJRKfQg?view_as=subscriber">Mensagens</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Mensagens</a>
+                        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Envolva-se</a>
                         <div class="dropdown-menu">
-                            <a class="dropdown-item" href="#">Ministérios</a>
+                            <a class="dropdown-item" href="ministerios.html">Ministérios</a>
                             <a class="dropdown-item" href="#">Eventos</a>
                         </div>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Envolva-se</a>
+                        <a class="nav-link" href="#">Contribua</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Contato</a>
@@ -141,33 +141,52 @@
                     <img src="images/doar.gif" alt="Doar">
                     <h1>"Porque Deus ama quem dá com alegria."</h1>
                     <p>2 Coríntios 9:7</p>
+                    <button class="btn btn-outline-secondary text-uppercase" type="submit">Doe</button>
                 </div>
             </div>
         </div>
 
-        <div class="container-fluid">
+        <div class="container-fluid programacao">
             <div class="row">
                 <div class="col text-center">
-                    <h1>Fique por dentro da programação</h1>
-                    <form>
-                        <div class="row">
-                            <div class="col-4 offset-2">
-                                <input name="programacao" class="field" placeholder="E-mail" type="email">
+                    <h1 class="text-uppercase">Fique por dentro da programação</h1>
+                    <form class="container">
+                        <div class="form-row align-items-center">
+                            <div class="col-sm-6 offset-sm-3">
+                                <label class="sr-only" for="email">Email</label>
+                                <input type="email" class="form-control" id="email" placeholder="E-mail">
                             </div>
-                            <div class="col-4">
-                                <button class="btn btn-principal" type="submit">Enviar</button>
+                            <div class="col-auto">
+                                <button class="btn btn-outline-secondary" type="submit">Enviar</button>
                             </div>
                         </div>
-
                     </form>
                 </div>
             </div>
         </div>
     </main>
+    <footer class="container-fluid pibvp-footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm">
+                    <p class="w-100 clearfix">PRIMEIRA IGREJA BASTISTA<br>EM VILA DA PENHA</p>
+                    <p class="w-25 clearfix">__</p>
+                    <p class="w-100 clearfix">(21) 3457-9500<br>secretaria@pibvp.org.br<br>​<br>​Travessa da Brandura, 426 - Vila da Penha/RJ<br>​Avenida Meriti, 2470 - Vila da Penha/RJ</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm">
+                    <a href="https://www.facebook.com/pibvpoficial/" target="_blank" class="facebook"><img src="images/face.png" class="rounded float-left" alt="Facebook"></a>
+                    <a href="https://www.youtube.com/channel/UCLzamsFk_JpZYsHhyJRKfQg?view_as=subscriber" target="_blank" class="youtube"><img src="images/youtube.png" class="rounded float-left" alt="YouTube"></a>
+                    <a href="https://www.instagram.com/pibvpoficial/?hl=pt-br" target="_blank" class="instagran"><img src="images/insta.png" class="rounded float-left" alt="Instagram"></a>
+                </div>
+            </div>
+        </div>
+    </footer>
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<script src="js/jquery.slim.min.js"></script>
+<script src="js/umd/popper.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
 </body>
 </html>
