Coloca o vídeo em ministérios fixo Coloca fundo no footer Coloca fundo no corpo da página em ministério

--- a/ministerios.html
+++ b/ministerios.html
@@ -53,6 +53,7 @@
             <h1 class="text-uppercase text-center"><b>Nossos<br>Ministérios</b></h1>
         </div>
     </div>
+	<div class="bg-ministerio">
     <div class="container">
         <div class="row ministerio-txt">
             <div class="col-md-9 offset-md-1">
@@ -152,6 +153,7 @@
             </div>
         </div>
     </div>
+	</div>
 </main>
 <footer class="container-fluid pibvp-footer">
     <div class="container">
