--- a/ministerios.html
+++ b/ministerios.html
@@ -19,7 +19,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
@@ -28,7 +28,7 @@
                 <li class="nav-item">
                     <a class="nav-link" target="_blank" href="https://www.youtube.com/channel/UCLzamsFk_JpZYsHhyJRKfQg?view_as=subscriber">Mensagens</a>
                 </li>
-                <li class="nav-item dropdown">
+                <li class="nav-item dropdown active">
                     <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Envolva-se</a>
                     <div class="dropdown-menu">
                         <a class="dropdown-item" href="ministerios.html">Ministérios <span class="sr-only">(current)</span></a>
@@ -36,7 +36,7 @@
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Contribua</a>
+                    <a class="nav-link" href="contribua.html">Contribua</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Contato</a>
