--- a/sobre.html
+++ b/sobre.html
@@ -19,10 +19,10 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a class="nav-link" href="index.html">Home</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item active">
                     <a class="nav-link" href="sobre.html">PIBVP <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
@@ -36,7 +36,7 @@
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Contribua</a>
+                    <a class="nav-link" href="contribua.html">Contribua</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Contato</a>
