Add página contato

--- a/contribua.html
+++ b/contribua.html
@@ -39,7 +39,7 @@
                     <a class="nav-link" href="contribua.html">Contribua <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Contato</a>
+                    <a class="nav-link" href="contato.html">Contato</a>
                 </li>
             </ul>
         </div>
@@ -47,7 +47,11 @@
 </header>
 <main role="main">
     <div class="container-fluid contribua">
-        <video autoplay loop muted class="bg-video-contribua" src="images/mar.mp4"></video>
+        <video class="bg-video-contribua" autoplay loop muted>
+            <source media="(min-width: 500px)" src="images/mar-480p.mp4" type="video/mp4">
+            <source media="(min-width: 960px)" src="images/mar-720p.mp4" type="video/mp4">
+            <source media="(min-width: 1024px)" src="images/mar-1080p.mp4" type="video/mp4">
+        </video>
         <div id="video-contribua"></div>
         <div class="row" >
             <img src="images/quando-vc-soma.png" alt="Quando você soma a igreja multiplica" class="img-fluid mx-auto d-block" />
@@ -68,17 +72,15 @@ a Deus. Nós simplesmente devolvemos a Ele o que nos foi dado."<br/>- Pr. João 
         <div class="row cor-txt">
             <div class="col-md-5 offset-md-1">
                 <img src="images/logo-bradesco.png" alt="Bradesco" class="img-fluid mx-auto d-block">
+                <div class="text-center">
+                    <p>Ag.: 2378-7<br/>C/C.: 40648-1</p>
+                </div>
             </div>
             <div class="col-md-5">
                 <img src="images/logo-santander.png" alt="Santander" class="img-fluid mx-auto d-block">
-            </div>
-        </div>
-        <div class="row cor-txt">
-            <div class="col-md-5 offset-md-1 text-center">
-                <p>Ag.: 2378-7<br/>C/C.: 40648-1</p>
-            </div>
-            <div class="col-md-5 text-center">
-                <p>Ag.: 2286<br/>C/C.: 13000695-6</p>
+                <div class="text-center">
+                    <p>Ag.: 2286<br/>C/C.: 13000695-6</p>
+                </div>
             </div>
         </div>
         <div class="row cor-txt">
