Adiciona a página eventos

--- a/contato.html
+++ b/contato.html
@@ -32,7 +32,7 @@
                     <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Envolva-se</a>
                     <div class="dropdown-menu">
                         <a class="dropdown-item" href="ministerios.html">Ministérios</a>
-                        <a class="dropdown-item" href="#">Eventos</a>
+                        <a class="dropdown-item" href="eventos.html">Eventos</a>
                     </div>
                 </li>
                 <li class="nav-item">
@@ -51,7 +51,7 @@
             <source media="(min-width: 500px)" src="images/contato-480p.mp4" type="video/mp4">
             <source media="(min-width: 960px)" src="images/contato-720p.mp4" type="video/mp4">
             <source media="(min-width: 1024px)" src="images/contato-1080p.mp4" type="video/mp4">
-        </video></video>
+        </video>
         <div class="row contato align-items-center">
             <div class="col">
                 <h1 class="display-1 text-center d-none d-sm-block">CONTATO</h1>
