--- a/ministerios.html
+++ b/ministerios.html
@@ -32,7 +32,7 @@
                     <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Envolva-se</a>
                     <div class="dropdown-menu">
                         <a class="dropdown-item" href="ministerios.html">Ministérios <span class="sr-only">(current)</span></a>
-                        <a class="dropdown-item" href="#">Eventos</a>
+                        <a class="dropdown-item" href="eventos.html">Eventos</a>
                     </div>
                 </li>
                 <li class="nav-item">
